# strava-renamer

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
app/: __init__.py  activity_filters.py  athlete_profile.py  cli.py  config.py  db.py  eval_tools.py  geocoding.py  main.py  naming.py  pipeline.py  recent_activity_sync.py  rename_policy.py  route_analysis.py  schemas.py  strava.py  title_builders.py  title_candidates.py  title_validation.py  worker.py
docs/: spec.md
docs/superpowers/specs/: 2026-04-18-ai-spec-and-agents-design.md  2026-04-18-ai-spec-and-agents-implementation-plan.md
launchd/: com.example.strava-renamer.plist.template
scripts/: install-launch-agent.sh  raycast-rename-sync-1-day.sh
tests/: test_eval_tools.py  test_filters.py  test_geocoding.py  test_naming.py  test_pipeline_clusters.py  test_pipeline_home_start.py  test_recent_activity_sync.py  test_strava.py  test_title_validation.py  test_webhooks.py
